# ifrSimulator

./: AirspeedIndicator.qml  Altimeter.qml  AttitudeIndicator.qml  CMakeLists.txt  HeadingIndicator.qml  Main.qml  VerticalScrollImage.qml  altimeter.svg.py  altimeter_bg.svg.py  altimeter_svg.py  color_palette.py  generator.py  main.cpp  svg_generator.py
svg/: airspeed_indicator_bg.svg.py  altimeter_bg.svg.py  altimeter_constants.py  altimeter_hand1.svg.py  altimeter_hand3.svg.py  altimeter_prss.svg.py  color_palette.py  constants.py  hand1.svg.py  hand2.svg.py  hsi_bg.svg.py  hsi_fg.svg.py
svg/altimeter/: altimeter_bg.svg.py  altimeter_constants.py  altimeter_prss.svg.py
